--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
   <meta charset='utf-8'>
   <title>Aparicion</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
   <link rel="stylesheet" type="text/css" href="style/main.css">
 </head>
 <body>
   <section id="cartas">
-   <img id="carta" class="aparicion" src="style/img/es/destino/DOTZ_Dorso_Destino.jpg">
+   <img id="carta" src="style/img/back-alert.jpg">
   </section>
   <section>
-  <a id="adelante">ADELANTE</a>
+    <a id="adelante">ADELANTE</a>
   </section>
 <script type="text/javascript" src="./js/app.js"></script>
 </body>
