--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
   <link rel="stylesheet" type="text/css" href="style/main.css">
 </head>
 <body>
+  <section id="fondo">
+  </section>
   <section id="cartas">
-   <img id="carta" src="style/img/back-alert.jpg">
+   <img id="carta" class="cartap" src="style/img/back-alert.jpg">
+  </section>
+  <section id="precartas">
+   <img id="cartente" class="precartap" src="style/img/back-alert.jpg">
   </section>
   <section>
     <a id="adelante">ADELANTE</a>
   </section>
-<script type="text/javascript" src="./js/app.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
