completado adelante y animación

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
   <section id="precartas">
    <img id="cartente" class="precartap" src="style/img/back-alert.jpg">
   </section>
+  <section id="total">
+    <a class="num_carta">0/0</a>
+  </section>
   <section>
     <a id="adelante">ADELANTE</a>
+  </section>
+  <section>
+    <a id="atras">atras</a>
   </section>
 <script type="text/javascript" src="js/app.js"></script>
 </body>
