--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
 <body>
   <section id="fondo">
   </section>
+  <section id="foncartas">
+   <img id="foncarta" class="foncartap" src="style/img/back-alert.jpg">
+  </section>
   <section id="cartas">
    <img id="carta" class="cartap" src="style/img/back-alert.jpg">
   </section>
-  <section id="precartas">
-   <img id="cartente" class="precartap" src="style/img/back-alert.jpg">
+  <section id="siguiente">
+   <img id="cartasig" class="castasigcss" src="style/img/back-alert.jpg">
+  </section>
+  <section id="anterior">
+   <img id="cartaant" class="cartaantcss" src="style/img/back-alert.jpg">
   </section>
   <section id="total">
     <a class="num_carta">0/0</a>
   </section>
-  <section>
-    <a id="adelante">ADELANTE</a>
-  </section>
-  <section>
-    <a id="atras">atras</a>
+  <section id="flechas" class="flechas">
+    <a class="anterior" id="atras">
+    </a>
+    <a class="siguiente" id="adelante"> 
+    </a>
   </section>
 <script type="text/javascript" src="js/app.js"></script>
 </body>
