--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" type="text/css" href="style/main.css">
 </head>
 <body>
+  <nav class="barra">
+    <section id="total">
+      <a class="num_carta">0/0</a>
+    </section>
+    <section>
+      <a id="inicio" class="empezar"></a>
+    </section>
+  </nav>
   <section id="fondo">
   </section>
   <section id="foncartas">
@@ -20,9 +28,6 @@
   </section>
   <section id="anterior">
    <img id="cartaant" class="cartaantcss" src="style/img/back-alert.jpg">
-  </section>
-  <section id="total">
-    <a class="num_carta">0/0</a>
   </section>
   <section id="flechas" class="flechas">
     <a class="anterior" id="atras">
